tests/fixtures/invalid/assign_to_value_path.torel
unit fixtures.assign_to_value_path;

export proc main() -> Exit {
    Exit.ok = Exit.ok;
    return Exit.ok;
}
